servicio y mocks de tipo-anotacion, y añadir los servicios al controllador documento, listo

--- a/WebLegemClient/src/app/administracion/tipo-anotacion/tipo-anotacion.tmpl.html
+++ b/WebLegemClient/src/app/administracion/tipo-anotacion/tipo-anotacion.tmpl.html
@@ -13,7 +13,7 @@
     </form>
 
     <select multiple>
-        <option ng-repeat="tipo in vm.tiposAnot">{{ tipo.nombre }}</option>
+        <option ng-repeat="tipo in vm.tiposAnotaciones">{{ tipo.nombre }} {{ tipo.rolActivo }} {{ tipo.rolPasivo }}</option>
     </select>
 
     <button type="button">
