--- a/WebLegemClient/src/app/gestion-documental/documento/informacion-documento.tmpl.html
+++ b/WebLegemClient/src/app/gestion-documental/documento/informacion-documento.tmpl.html
@@ -1,8 +1,8 @@
 ﻿<form>
     
     <label for="tipo-documento">Tipo de Documento</label>
-    <select id="tipo-documento" ng-model="vm.documento.tipo-documento">
-        <option ng-repeat="tipo in vm.tipos-documento">{{ tipo.nombre }}</option>
+    <select id="tipo-documento" ng-model="vm.documento.tipoDocumento">
+        <option ng-repeat="tipo in vm.tiposDocumento">{{ tipo.nombre }}</option>
     </select>    
 
     <label for="numero">Numero</label>
