--- a/WebLegemClient/src/app/administracion/entidad/entidad.tmpl.html
+++ b/WebLegemClient/src/app/administracion/entidad/entidad.tmpl.html
@@ -1,9 +1,9 @@
 ﻿<div>
-    <form>
+    <form>        
         <label for="nombre-entidad">Nombre Entidad</label>
         <input id="nombre-entidad" type="text" placeholder="Entidad" ng-model="vm.entidad.nombre" />
         <label for="tipo-entidad">Tipo Entidad</label>
-        <select>
+        <select>            
             <option ng-repeat="tipo in vm.tiposEntidad" value="{{ tipo.id }}">
                 {{ tipo.id }} {{ tipo.nombre }} 
             </option>
@@ -13,7 +13,7 @@
 
     <select multiple size="3">
         <option ng-repeat="entidad in vm.entidades">
-            <p>{{ entidad.nombre }} {{ entidad.tipo }}</p>
+            <p>{{ entidad.nombre }} {{ entidad.tipo.nombre }}</p>
         </option>
     </select>
     <button type="button" value="Editar">Editar</button>
