--- a/WebLegemClient/src/app/noticias/noticias.tmpl.html
+++ b/WebLegemClient/src/app/noticias/noticias.tmpl.html
@@ -1,1 +1,9 @@
-﻿<h1>Estas son las noticias</h1>
+﻿<div class="noticias">
+
+    <h1>Noticias</h1><div ui-view></div>
+
+    <h1>Estas son las noticias</h1>
+</div>
+<div>
+    <h5>contenido</h5>
+</div>
