--- a/WebLegemClient/src/app/login/login.tmpl.html
+++ b/WebLegemClient/src/app/login/login.tmpl.html
@@ -1,6 +1,14 @@
-﻿<form>
-	<label for="user">Usuario</label>
-	<input id="user" type="text" ng-model="vm.user" placeholder="Nombre de Usuario" />
-	<label for="password">Contraseña</label>
-	<input type="password" ng-model="vm.password" placeholder="Contraseña" />
-</form>
+﻿<div class="contenedor_login">
+    <div class="titulo">
+        <h3>WEBLEGEM</h3>
+        <h3>Bienvenido, Ingresa tu Cuenta</h3>
+    </div>
+    <div class="form">
+        <form>
+            <input class="input_login" id=" user" type="text" ng-model="vm.user" placeholder="Nombre de Usuario" />
+            <div class="circulo"></div>
+            <input class="input_login" type="password" ng-model="vm.password" placeholder="Contraseña" />
+            <input class="submit_login" type="submit" value="INGRESAR"/>
+        </form>
+    </div>
+</div>
