Ya se puede subir archivo al servidor, y se obtiene la respuesta con su nombre y ruta

--- a/WebLegemClient/src/app/gestion-documental/documento/subir-archivo.tmpl.html
+++ b/WebLegemClient/src/app/gestion-documental/documento/subir-archivo.tmpl.html
@@ -2,7 +2,10 @@
 
 <form>
     <label for="archivo">Ingresar Archivo</label>
-    <input id="archivo" type="file" />
+    <input type="file" nv-file-select uploader="vm.uploader" /><br />
+
+    {{ vm.documento.nombre }}
+    {{ vm.documento.ruta }}
 
     <fieldset>
         <legend>¿Cuantas columnas tiene tu documento?</legend>
@@ -11,6 +14,9 @@
         <input id="rad.tres" name="estructura" type="radio" value="Tres columnas" /><label for="rad.tres">Tres Columnas</label><br />
         <input id="rad.otro" name="estructura" type="radio" value="Otro" /><label for="rad.otro">Otro</label>
     </fieldset>
+
+    <button type="button" ng-click="vm.uploader.uploadAll()">Subir</button>
 </form>
 
 <button ui-sref="gestion-documental.crear-documento.informacion-documento">Siguiente</button>
+
