--- a/WebLegemClient/src/css/login.css
+++ b/WebLegemClient/src/css/login.css
@@ -1,5 +1,5 @@
 ﻿.contenedor_login{
-    width:50%;
+    width:40%;
     margin:auto;
     padding:2em 1em;
 }
@@ -8,16 +8,7 @@
     font-family:sans-serif;
 }
 
-.titulo{
-    color: white;
-    text-align:center;
-    height:auto;
-    background:  #37404A;
-    border-radius:10px 10px 0 0;
-    display:block;
-    padding:10px;
-    font-family:sans-serif;
-}
+
 
 .form{
     background:#fff;
@@ -27,60 +18,65 @@
     position:relative;
 }
 
-.submit_login{
-    width:100%;
-    background: #4DBD88;
-    border-radius: 0.5em;
-    border:none;
-    line-height: 2.5;
-    color:#fff;
-    font-size:1em;
-    cursor:pointer;
-    transition:all 1s;
-    -webkit-transition:all 1s;
-    -moz-transition: all 0.5s;
-
-}
-
-.submit_login:hover {
-    background: #309264;
-    font-weight:500;
-}
-
-
-
 .input_login{
     width:95%;
     margin-bottom: 2em;
     line-height: 2.5em;
     padding: 0 1em;
-    transition:all 1s;
-    -webkit-transition:all 1s;
-    -moz-transition: all 0.5s;
+    transition:        box-shadow 0.5s;
+    -webkit-transition:box-shadow 0.5s;
+    -moz-transition:   box-shadow 0.5s;
     box-shadow: 1px 0 #309264 inset;
-   
-
 }
 
 .input_login:focus{
     border:2px solid  #309264;
-    box-shadow: 600px 0 white inset;
+    box-shadow: 500px 0 white inset;
 }
+
 
 .input_login:focus::-moz-placeholder{
     color: #246848;
     font-weight:bold;
 }
 
-.circulo {
+
+.input_login:focus + .circulo1{
+    background: #309264;
+}
+
+.input_login:focus + .circulo2{
+    background: #309264;
+}
+
+.circulo1 {
     position:absolute;
     display:inline-block;
-    right: 35px;
+    right: 1.5em;
     top: 1.5em;
     width: 50px;
     height: 50px;
      -moz-border-radius: 50%;
      -webkit-border-radius: 50%;
      border-radius: 50%;
-     background: #5cb85c;
+     background: #a5a3a3;
+     transition:all 0.5s;
+    -webkit-transition:all 0.5s;
+    -moz-transition: all 0.5s; 
+}
+
+.circulo2 {
+    position:absolute;
+    display:inline-block;
+    right: 1.5em;
+    top: 6em;
+    width: 50px;
+    height: 50px;
+     -moz-border-radius: 50%;
+     -webkit-border-radius: 50%;
+     border-radius: 50%;
+     background: #a5a3a3;
+     transition:all 0.5s;
+    -webkit-transition:all 0.5s;
+    -moz-transition: all 0.5s; 
 }
