--- a/WebLegemClient/src/app/administracion/tipo-documento/tipo-documento.tmpl.html
+++ b/WebLegemClient/src/app/administracion/tipo-documento/tipo-documento.tmpl.html
@@ -10,11 +10,8 @@
         </form>
 
         <label class="texto_labels">Lista de tipos de documentos</label>
-
-        <!--ng-disabled="vm.editando"ng-options="tipo as tipo.nombre for tipo in vm.tiposDoc" ng-model="vm.tipoDocSeleccionado"-->
-        <select multiple size="3" class="select_td_te">
-            <option>Resolucion</option>
-            <option>Carta</option>
+        
+        <select multiple size="3" class="select_td_te" ng-disabled="vm.editando" ng-options="tipo as tipo.nombre for tipo in vm.tiposDoc" ng-model="vm.tipoDocSeleccionado">
         </select>
 
         <button class="a_boton btn_tipo_doc1" ng-disabled="vm.editando" type="button" ng-click="vm.remover()">
@@ -25,8 +22,8 @@
         </button>
 
     </div>
+
     <div id="contenedor2">
         <button class="a_boton" id="btn_aceptar">Aceptar</button>
-        </divclass>
     </div>
 </div>
