--- a/WebLegemClient/src/css/estilos_weblegem.css
+++ b/WebLegemClient/src/css/estilos_weblegem.css
@@ -2,7 +2,7 @@
 /*----------------------------------------*/
 .a_boton{
     background-color: #45b15d;
-    padding: 0.7em 2em;
+    padding: 0.6em 2em;
 	font-size: 0.9em;
 	font-weight: 600;
 	text-transform: uppercase;
@@ -80,16 +80,6 @@
 .a_thumbnail_container > label {
    display: block;
    text-align: center;
-}
-
-/*FOOTER*/
-/*------*/
-footer{
-    display:block;
-    text-align:center;
-    position: absolute;
-    bottom: -50px;
-    left:40%;
 }
 
 /*Titulos para los contenidos*/
@@ -212,4 +202,54 @@ footer{
 /*cuerpo del cocumento*/
 .cuerpo{
     margin-top:20px;
+}
+
+/*-------------------*/
+/*form de Busqueda*/
+
+.a_search{
+    position:relative;
+    width: 200px;
+	height:34px;
+    background: #37404A;
+    border-radius: 2px;
+    -webkit-box-shadow: -0.1em 0.2em 0.4em 0 #123423;
+    -moz-box-shadow: -0.1em 0.2em 0.4em 0 #123423;
+    box-shadow: -0.1em 0.2em 0.4em 0 #123423;
+}
+
+.a_search input{
+    position:absolute;
+    left:5px;
+    top:3px;
+    padding: 5px;
+    border: 1px solid black ;
+    background: #fff;
+    border-radius: 3px 0 0 3px;
+    
+}
+
+.a_search #lupa {
+    position: absolute;
+    top:6px;
+    right:10px;
+    cursor: pointer;
+}  
+
+ 
+.a_search #lupa:before { /* flecha */
+    content: '';
+    position: absolute;
+    border-width: 18px 8px 8px 0;
+    border-style: solid solid solid none;
+    border-color: transparent #438cdb transparent;
+    top: 8px;
+    left: -5px;
+}
+
+/*TEXTO PARA LOS LABELS*/
+.texto_labels{
+    display:block;
+    font-size:1em;
+    font-family:'Franklin Gothic';
 }
