--- a/WebLegemClient/src/css/login.css
+++ b/WebLegemClient/src/css/login.css
@@ -44,6 +44,7 @@
     margin-bottom: 2em;
     line-height: 2.5em;
     padding: 0 1em;
+    position:relative;
     transition:        box-shadow 0.5s;
     -webkit-transition:box-shadow 0.5s;
     -moz-transition:   box-shadow 0.5s;
@@ -73,8 +74,8 @@
 .circulo1 {
     position:absolute;
     display:inline-block;
-    right: 1.5em;
-    top: 1.5em;
+    right: 0;
+    top: -6px;
     width: 50px;
     height: 50px;
      -moz-border-radius: 50%;
@@ -86,11 +87,15 @@
     -moz-transition: all 0.5s; 
 }
 
+.candado{
+    position:relative;
+}
+
 .circulo2 {
     position:absolute;
-    display:inline-block;
-    right: 1.5em;
-    top: 6.2em;
+    display:block;
+    right:0;
+    top: -6px;
     width: 50px;
     height: 50px;
      -moz-border-radius: 50%;
@@ -101,3 +106,4 @@
     -webkit-transition:all 0.5s;
     -moz-transition: all 0.5s; 
 }
+
