se añadio la pantalla de resultado ocr con funcion y controller

--- a/WebLegemClient/src/app/gestion-documental/documento/asunto.tmpl.html
+++ b/WebLegemClient/src/app/gestion-documental/documento/asunto.tmpl.html
@@ -3,6 +3,7 @@
     
     <textarea class="text_area_asunto" rows="4" cols="50" ng-model="vm.documento.asunto"></textarea>
 
-    <button class="a_boton a_block" type="button" ui-sref="gestion-documental.crear-documento.pergunta-anotacion">Siguiente</button>
-    <button class="a_boton a_block" type="button" ng-click="vm.crear()">Crear</button>
+    <!--<button class="a_boton a_block" type="button" ui-sref="gestion-documental.crear-documento.pergunta-anotacion">Siguiente</button>-->
+    <button class="a_boton a_block" type="button" ui-sref="gestion-documental.crear-documento.resultado-ocr">Siguiente</button>
+    
 </form>
