--- a/WebLegemClient/src/app/login/login.tmpl.html
+++ b/WebLegemClient/src/app/login/login.tmpl.html
@@ -8,7 +8,7 @@
     <div>      
         <form class="form">
             <div class="candado">
-                <input class="input_login" id="user" type="text" ng-model="vm.user" placeholder="Nombre de Usuario" />
+                <input class="input_login" id="user" type="text" ng-model="vm.user.nombre" placeholder="Nombre de Usuario" />
 
             <div class="circulo1">
                 <div style="height:100%;">
@@ -31,7 +31,7 @@
             </div>
             </div>
             <div class="candado">
-                <input class="input_login" type="password" ng-model="vm.password" placeholder="Contraseña" />
+                <input class="input_login" type="password" ng-model="vm.user.password" placeholder="Contraseña" />
             <div class="circulo2">
                 <div style="height:100%;">
                     <svg version="1.1" id="user_lock" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -47,7 +47,7 @@
                 </div>
             </div>
             </div>
-            <input class="a_boton" style="display:block; margin:auto;" type="submit" value="INGRESAR" />
+            <input class="a_boton" style="display:block; margin:auto;" type="submit" value="INGRESAR" ng-click="vm.logIn()" />
             
             <a href="#" style="padding-top:30px; text-align:center; display:block;"> Olvide mi contraseña </a>
 
