--- a/WebLegemClient/src/app/administracion/tipo-documento/tipo-documento.tmpl.html
+++ b/WebLegemClient/src/app/administracion/tipo-documento/tipo-documento.tmpl.html
@@ -11,7 +11,7 @@
 
         <label class="texto_labels">Lista de tipos de documentos</label>
         
-        <select multiple size="3" class="select_td_te" ng-disabled="vm.editando" ng-options="tipo as tipo.nombre for tipo in vm.tiposDoc" ng-model="vm.tipoDocSeleccionado">
+        <select size="3" class="select_td_te" ng-disabled="vm.editando" ng-options="tipo as tipo.nombre for tipo in vm.tiposDoc" ng-model="vm.tipoDocSeleccionado">
         </select>
 
         <button class="a_boton btn_tipo_doc1" ng-disabled="vm.editando" type="button" ng-click="vm.remover()">
