--- a/WebLegemClient/src/app/administracion/tipo-entidad/tipos-entidad.tmpl.html
+++ b/WebLegemClient/src/app/administracion/tipo-entidad/tipos-entidad.tmpl.html
@@ -6,20 +6,21 @@
                 <label class="texto_labels">Nombre de entidad</label>
                 <input class="a_input" style="width:80%;" type="text" ng-model="vm.tipoEntidad.nombre" placeholder="Ingrese el nombre Entidad" />
             </div>
-            <div style="display:inline-block; width:40%;">
+            <!--<div style="display:inline-block; width:40%;">
                 <label class="texto_labels">tipo de entidad</label>
                 <input class="a_input" style="width:80%;" type="text" ng-model="vm.tipoEntidad.tipo" placeholder="Ingrese el tipo de entidad" />
-            </div>
+            </div>-->
             <div style="display:inline-block; width:40%;">
-                <button class="a_boton" type="button" style="display:inline-block;">Añadir</button>
+                <button class="a_boton" type="button" style="display:inline-block;" ng-if="!vm.editando" ng-click="vm.create()">Añadir</button>
+                <button class="a_boton" type="button" style="display:inline-block;" ng-if="vm.editando" ng-click="vm.guardar()">Guardar</button>
                 <button class="a_boton" type="button" style="display:inline-block;" ng-click=" vm.cancelar()">Cancelar</button>
             </div>
         </form>
 
         <label class="texto_labels" style="margin: 1rem 1rem; ">Lista de tipo de entidades</label>
-        <select multiple size="3" class="select_td_te">
-            <option ng-repeat="tipo in vm.tiposEntidad">{{ tipo.nombre }}</option>            
-        </select>
+        
+        <select size="3" class="select_td_te" ng-disabled="vm.editando" ng-options="tipo as tipo.nombre for tipo in vm.tiposEntidad" ng-model="vm.tipoEntSeleccionada"></select>
+        
         <button class="a_boton btn_tipo_doc1" ng-disabled="vm.editando" type="button" ng-click="vm.remover()">
             Remover
         </button>
