--- a/WebLegemClient/src/app/administracion/tipo-documento/tipo-documento.tmpl.html
+++ b/WebLegemClient/src/app/administracion/tipo-documento/tipo-documento.tmpl.html
@@ -17,16 +17,16 @@
             <option>Carta</option>
         </select>
 
-        <button class="a_boton btn_tipo_doc1" ng-disabled="vm.editando" type="button" ng-click="vm.remover()">
+        <button class="a_boton btn_tipo_doc1" id="td_remover" ng-disabled="vm.editando" type="button" ng-click="vm.remover()">
             Remover
         </button>
-        <button class="a_boton btn_tipo_doc1" ng-disabled="vm.editando" type="button" ng-click="vm.editar()">
+        <button class="a_boton btn_tipo_doc1" id="td_editar" " ng-disabled="vm.editando" type="button" ng-click="vm.editar()">
             Editar
         </button>
 
-    </div>
-    <div id="contenedor2">
-        <button class="a_boton" id="btn_aceptar">Aceptar</button>
-        </divclass>
+        
+            
+        </object>
+
     </div>
 </div>
